--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.28"
+types-requests = "^2.28"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12"
@@ -50,7 +51,9 @@ addopts = [
     "--mypy",
     "--pylint",
     "--pydocstyle",
-    "--cov=spotimoo"
+    "--cov=spotimoo",
+    "--cov-report=term",
+    "--cov-report=html"
 ]
 testpaths = [
     "spotimoo",
