--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,8 @@ jobs:
       - name: Install Dependencies
         run: poetry install
 
-      - name: pytest
+      - name: Set Spotify API token 
+        run: echo 'export SPOTIFY_API_TOKEN="${{ secrets.SPOTIFY_API_TOKEN }}"' >> $GITHUB_ENV
+
+      - name: Run pytest
         run: poetry run pytest
