--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,13 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: poetry install
 
-      - name: Set Spotify API token 
-        run: echo 'export SPOTIFY_API_TOKEN="${{ secrets.SPOTIFY_API_TOKEN }}"' >> $GITHUB_ENV
+      - name: Set Spotify API tokens
+        run: |
+          echo 'export CLIENT_ID="${{ secrets.CLIENT_ID }}"' >> $GITHUB_ENV
+          echo 'export CLIENT_SECRET="${{ secrets.CLIENT_SECRET }}"' >> $GITHUB_ENV
 
       - name: Run pytest
         run: poetry run pytest
