--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.11"
 requests = "^2.28"
 types-requests = "^2.28"
+six = "^1.16"
+types-six = "^1.16"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12"
