--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Set Spotify API tokens
         run: |
-          echo "export CLIENT_ID=\"${{ secrets.CLIENT_ID }}\"" >> $GITHUB_ENV
-          echo "export CLIENT_SECRET=\"${{ secrets.CLIENT_SECRET }}\"" >> $GITHUB_ENV
+          echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> $GITHUB_ENV
+          echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> $GITHUB_ENV
 
       - name: Run pytest
         run: poetry run pytest
