--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           fetch-depth: 1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+        run:
+          git config user.name github-actions
+          git config user.email github-actions@github.com
 
       - name: Install Python 3.11
         uses: actions/setup-python@v1
