--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-        run:
+      - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
 
