--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,9 +9,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    permissions: write-all
+
     steps:
       - uses: actions/checkout@v3
         with:
+          fetch-depth: 1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: |
           git config user.name github-actions
@@ -40,6 +43,6 @@ jobs:
         run: |
           git add ./docs/.
           git commit -m 'Update documentation page'
-          
+
       - name: Git push
         run: git push
