--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,16 +9,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    permissions: write-all
-
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name Egor
+          git config user.email bronnikov.40@mail.ru
 
       - name: Install Python 3.11
         uses: actions/setup-python@v1
